# suse-saas-tools

./: .bumpversion.cfg  .gitignore  Makefile  README.rst  setup.cfg
.github/workflows/: ci-code-style.yml  ci-units-types.yml
aws/container/sle15/: appliance.kiwi  config.sh  images.sh
aws/container/sle15-dev/: appliance.kiwi
aws/resolve_customer/: .bumpversion.cfg  README.rst  app_resolve_customer.py  pyproject.toml
aws/resolve_customer/package/: python-resolve_customer-spec-template  python-resolve_customer.changes
aws/resolve_customer/resolve_customer/: app.py  assume_role.py  customer.py  datazone.py  defaults.py  entitlements.py  error.py  version.py
aws/resolve_customer/test/data/: assume_role.yml
aws/resolve_customer/test/unit/: app_test.py  assume_role_test.py  customer_test.py  datazone_test.py  defaults_test.py  entitlements_test.py  error_test.py
aws/sqs_event_manager/: .bumpversion.cfg  README.rst  app_sqs_event_manager.py  pyproject.toml
aws/sqs_event_manager/package/: python-sqs_event_manager-spec-template  python-sqs_event_manager.changes
aws/sqs_event_manager/sqs_event_manager/: app.py  defaults.py  message.py  queue.py
aws/sqs_event_manager/test/data/: sqs_event_manager.yml
aws/sqs_event_manager/test/unit/: app_test.py  defaults_test.py  message_test.py  queue_test.py
helper/: simulate_sns_event.py  simulate_sqs_event.py  update_changelog.py
helper/events/: unsubscribe-pending.json
