[tool.poetry]
name = "resolve_customer"
version = "0.0.1"
description = "resolve_customer - AWS ResolveCustomer API"
license = "GPL-3.0+"
readme = "README.rst"
# homepage = ""
# documentation = ""
# repository = ""

authors = [
   "PubCloud Development team <public-cloud-dev@susecloud.net>",
]
maintainers = [
   "PubCloud Development team <public-cloud-dev@susecloud.net>",
]

packages = [
   { include = "resolve_customer"},
]

include = [
   { path = ".bumpversion.cfg", format = "sdist" },
   { path = ".coverage*", format = "sdist" },
   { path = "package", format = "sdist" },
   { path = "test", format = "sdist" },
]

classifiers = [
   # classifier: http://pypi.python.org/pypi?%3Aaction=list_classifiers
   "Development Status :: 5 - Production/Stable",
   "Intended Audience :: Developers",
   "Operating System :: POSIX :: Linux",
   "Topic :: System :: Operating System",
]

[tool.poetry.urls]
# "Bug Tracker" = ""

[tool.poetry.dependencies]
python = "^3.11"
requests = ">=2.25.0"
setuptools = ">=50"

[tool.poetry.scripts]
# resolve_customer = "resolve_customer.resolve_customer:handle_event"

[tool.poetry.group.test]
[tool.poetry.group.test.dependencies]
# python unit testing framework
pytest = ">=5.4.3"
pytest-cov = "*"
pytest-xdist = "*"
# type checking
mypy = ">=0.971"
types-requests = "*"
types-mock = "*"

[tool.poetry.group.style]
[tool.poetry.group.style.dependencies]
flake8 = ">=4.0.0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
